--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div id="bg"></div>
     <nav class="nav">
       <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Skill</li>
-        <li>Experience</li>
-        <li>Contact</li>
+        <li><a href="">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skill">Skill</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
     <header>
@@ -34,8 +34,8 @@
 
 </div></div>
  
-    <main>
-      <div class="profil" style="">
+    <main id="about">
+      <div class="profil" >
       <div class="gambar"><img src="img/profil.png" alt=""></div>
       <div class="text">
         <h2 class="about" style="text-align:center">I AM SIDRATUL PUTRA</h2>
@@ -122,10 +122,10 @@ about cool
 stuff.
 Are you
 minding a
-project?<br><span><a href="">Let's talk</a></span>
+project?<br><span><a href="https://wa.me/6285810542251">Let's talk</a></span>
  </div>
 
-<div class="end"><div class="social"><a href="">LinkedIn</a><a href="">Instagram</a><a href="">Facebook</a></div><div class="versi"><p>Design by <span>Sidratul Putra </span></p> <p> 2026 version </p><p> Thanks! </p></div></div></footer>
+<div class="end"><div class="social"><a href="">LinkedIn</a><a href="https://www.instagram.com/thoriqxi_/">Instagram</a><a href="https://wa.me/6285810542251">Whatsapp</a></div><div class="versi" ><p style="text-align: center;"> Develop by <span> Sidratul Putra </span></p> <p> 2026 version </p><p> Thanks! </p></div></div></footer>
     <script src="script.js"></script>
   </body>
 </html>
