--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
       </div>
     </main>
-    <div class="pageSkill">
+    <div class="pageSkill" id="#skill">
       <div class="kiri">
         <p>
           My <br />
@@ -80,13 +80,13 @@ and partner of some digital and
 fintech startups. Also, Judge at
 CSSDA and The Webby.</p>
           </div>
-          </div><div class="pageProject">
+          </div><div class="pageProject" id="#project">
             <div class="judulProject">PROJECT</div>
             <div class="row1p row"><img src="img/project1.JPG" alt=""></div>
             <div class="row2p row"><img src="img/project2.JPG" alt=""></div>
             <div class="row3p row"><img src="img/project1.JPG" alt=""></div>
           </div>
-        </div><div class="experiences">
+        </div><div class="experiences" id="#experiences">
   <div class="leftE">experiences <br>works</div>
   <div class="rightE">
     <div class="rowE rowex rowex1">
@@ -125,8 +125,9 @@ minding a
 project?<br><span><a href="https://wa.me/6285810542251">Let's talk</a></span>
  </div>
 
-<div class="end"><div class="social"><a href="">LinkedIn</a><a href="https://www.instagram.com/thoriqxi_/">Instagram</a><a href="https://wa.me/6285810542251">Whatsapp</a></div><div class="versi" ><p style="text-align: center;"> Develop by <span> Sidratul Putra </span></p> <p> 2026 version </p><p> Thanks! </p></div></div></footer>
+<div class="end" id="#contact"><div class="social"><a href="">LinkedIn</a><a href="https://www.instagram.com/thoriqxi_/">Instagram</a><a href="https://wa.me/6285810542251">Whatsapp</a></div><div class="versi" ><p style="text-align: center;"> Develop by <span> Sidratul Putra </span></p> <p> 2026 version </p><p> Thanks! </p></div></div></footer>
     <script src="script.js"></script>
   </body>
 </html>
+
 
