--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><a href="">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#skill">Skill</a></li>
-        <li><a href="#experience">Experience</a></li>
+        <li><a href="#experiences">Experience</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -44,8 +44,8 @@
       </div>
       </div>
     </main>
-    <div class="pageSkill" id="#skill">
-      <div class="kiri">
+    <div class="pageSkill" >
+      <div id="#skill" class="kiri" >
         <p>
           My <br />
           Skill
@@ -129,5 +129,6 @@ project?<br><span><a href="https://wa.me/6285810542251">Let's talk</a></span>
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
