--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ CSSDA and The Webby.</p>
           </div><div class="pageProject">
             <div class="judulProject">PROJECT</div>
             <div class="row1p row"><img src="img/project1.JPG" alt=""></div>
-            <div class="row2p row"><img src="img/projek2.JPG" alt=""></div>
-            <div class="row3p row"><img src="img/projek3.JPG" alt=""></div>
+            <div class="row2p row"><img src="img/projek2.png" alt=""></div>
+            <div class="row3p row"><img src="img/projek3.png" alt=""></div>
           </div>
         </div><div class="experiences" id="experiences">
   <div class="leftE">experiences <br>works</div>
@@ -129,5 +129,6 @@ project?<br><span><a href="https://wa.me/6285810542251">Let's talk</a></span>
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
